--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ProductDetails"/>
+        <activity
+            android:name=".ProductDetails"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
