--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity
             android:name=".ProductDetails"
             android:parentActivityName=".MainActivity"/>
+        <activity android:name=".cart.CartActivity" />
     </application>
 
 </manifest>
