--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:2.1.0"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.3'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.3'
 }
